Fix Analytics button position on mobile

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -366,9 +366,12 @@ body {
     }
     
     .dashboard-link {
-        top: 35px;
-        right: 15px;
-        font-size: 8px;
+        position: static;
+        display: block;
+        margin-top: 20px;
+        margin-bottom: -10px;
+        font-size: 9px;
+        text-align: center;
     }
     
     .container {
